# radicle-link

./: .rustfmt.toml  Cargo.toml  cobfixes.adoc  deny.toml  patch  thoughts.adoc  todo.adoc
bins/: Cargo.toml
bins/linkd-git/: Cargo.toml
bins/linkd-git/src/: main.rs
bins/lnk/: Cargo.toml
bins/lnk-gitd/src/: main.rs
bins/lnk-identities-dev/: Cargo.toml
bins/lnk-identities-dev/src/: main.rs
bins/lnk-profile-dev/: Cargo.toml
bins/lnk-profile-dev/src/: main.rs
cli/gitd-lib/: Cargo.toml
cli/gitd-lib/src/: git_subprocess.rs  lib.rs  ssh_service.rs
cli/gitd-lib/t/: Cargo.toml
cli/gitd-lib/t/src/: tests.rs
cli/linkd-lib/: Cargo.toml
cli/linkd-lib/src/api/: sockets.rs
cli/linkd-lib/t/: Cargo.toml
cli/linkd-lib/t/examples/: socket_activation.rs
cli/linkd-lib/t/src/: gen.rs  helpers.rs
cli/lnk-clib/: Cargo.toml
cli/lnk-clib/src/: runtime.rs
cli/lnk-exe/src/cli/: args.rs  main.rs
cli/lnk-identities/src/: git.rs  identity_dir.rs  lib.rs  person.rs  project.rs
cli/lnk-identities/src/cli/: main.rs
cli/lnk-identities/src/git/: checkout.rs  existing.rs  include.rs  new.rs
cli/lnk-profile/src/cli/: main.rs
cli/lnk-sock-activation/: Cargo.toml
cli/lnk-sock-activation/src/: lib.rs
cli/lnk-socket-activation/: Cargo.toml
cli/lnk-socket-activation/src/: lib.rs  osx.rs
cli/lnk-socket-activation/src/unix/: listen_fds.rs
cli/lnk-sync/src/: forked.rs  lib.rs
cli/lnk-sync/src/cli/: args.rs  main.rs
cob/: Cargo.toml
cob/src/: cache.rs  change.rs  change_graph.rs  change_metadata.rs  identity_cache.rs  lib.rs  refs_storage.rs  schema.rs  schema_change.rs  trailers.rs  validated_automerge.rs
docs/rfc/: 0662-collaborative-objects.adoc  0696-p2p-node.adoc  0698-cli-infrastructure.adoc  0699-tracking-storage.adoc  0702-request-pull.adoc  0703-storage-hooks.adoc  0704-gitd-ref-rewriting.adoc  0704-gitd.adoc
git-helpers/src/: credential.rs  remote_helper.rs
git-helpers/t/src/integration/: remote.rs
git-server/: Cargo.toml
git-server/src/: args.rs  config.rs  exec_str.rs  git_shell.rs  git_subprocess.rs  hooks.rs  lib.rs  processes.rs  server.rs  service.rs
librad/src/: collaborative_objects.rs  git.rs  paths.rs
librad/src/git/: include.rs  local.rs  rad_url.rs  refs.rs  storage.rs
librad/src/git/local/: transport.rs
link-async/src/: incoming.rs  lib.rs  tasks.rs
link-git/: Cargo.toml
link-git/src/: lib.rs  protocol.rs  service.rs  wrapped.rs
link-git/src/protocol/: packet_line.rs
link-git/src/wrapped/: incoming.rs
link-hooks/: Cargo.toml
link-hooks/src/: data.rs  lib.rs  track.rs
link-hooks/t/src/: properties.rs
link-identities/src/: git.rs
link-sock-activation/: Cargo.toml
link-sock-activation/src/: lib.rs  listen_fds.rs
lnk-clib/: Cargo.toml
lnk-exe/: Cargo.toml
lnk-identities/: Cargo.toml
lnk-profile/: Cargo.toml
lnk-profile/src/: lib.rs
node-lib/: Cargo.toml
node-lib/src/: announcements.rs  api.rs  args.rs  cfg.rs  lib.rs  node.rs  socket_activation.rs
node-lib/src/api/: client.rs  codec.rs  events.rs  io.rs  messages.rs  rpc.rs  sockets.rs  wire_types.rs
node-lib/src/socket_activation/: unix.rs
rad-identities/: Cargo.toml
rad-identities/src/: git.rs  project.rs
rad-identities/src/cli/: args.rs
rad-identities/src/git/: push.rs
test/: Cargo.toml
test/examples/: socket_activation.rs  socket_activation_wrapper.rs
test/it-helpers/: Cargo.toml
test/it-helpers/src/: working_copy.rs
(+34 files in other folders)
