[package]
name = "lnk-socket-activation"
version = "0.1.0"
edition = "2021"
authors = ["Alex Good <alex@memoryandthought.me>"]
license = "GPL-3.0-or-later"

[lib]

[dependencies]
thiserror = "1.0"
nix = "0.23"
tracing = { version = "0.1", default-features = false, features = [ "attributes", "std" ] }
itertools = "0.10.0"
